# rand

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac  configure.in  rand.lsm  rand.lsm.in  rand.spec  rand.spec.in  rpm-rand.spec
debian/: Makefile.am  README  README.debian  changelog  control  copyright  files  info.ex  manpage.1.ex  rand.substvars  rules
docs/: Makefile.am  doxygen.conf.in  rand.1
intl/: Makefile.in
m4/: Makefile.am
man/: Makefile.am  rand.1
po/: ChangeLog  Makevars  POTFILES.in  cat-id-tbl.c  en.po  en_AU.po  en_CA.po  en_GB.po  en_IE.po  en_US.po  pt.po  pt_BR.po  rand.pot
src/: .indent.pro  Makefile.am  help.c  help.h  main.c  options.c  options.h  rand.c  rand.h  seed.c  seed.h
test/: Makefile.am  test_rand.c  test_src_options.c  test_src_options.h  test_src_rand.c  test_src_rand.h  test_src_seed.c  test_src_seed.h
