dnl $Id: configure.in,v 1.8 2004/02/18 00:01:46 erik Exp $

AC_INIT(src/rand.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(rand, 1.8)

ALL_LINGUAS="en en_AU en_CA en_GB en_IE en_US pt pt_BR"
AM_GNU_GETTEXT(external, need-ngettext)
if test ! "$HAVE_GETTEXT" = "" 
then
	AC_DEFINE(_,gettext,We have gettext)
else
	AC_DEFINE(_,,No gettext)
fi

AC_PROG_CC
AC_PROG_INSTALL

AC_CHECK_HEADERS(unistd.h stdio.h stdlib.h string.h time.h)

AM_PATH_CHECK(,TEST=test,TEST=)
AC_SUBST(CHECK_CFLAGS)
AC_SUBST(CHECK_LIBS)
AC_SUBST(TEST)

AC_OUTPUT(Makefile po/Makefile.in docs/Makefile src/Makefile test/Makefile rand.spec rand.lsm docs/doxygen.conf)
