dnl $Id: configure.in,v 1.10 2004/02/22 18:01:43 erik Exp $

AC_INIT(src/rand.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(rand, 1.8)

ALL_LINGUAS="en en_AU en_CA en_GB en_IE en_US pt pt_BR"
AM_GNU_GETTEXT(external, need-ngettext)
if test "$USE_NLS" = "no" 
then
	AC_DEFINE(gettext,,No gettext)
fi

AC_PROG_CC
AC_PROG_INSTALL

AC_CHECK_HEADERS(unistd.h stdio.h stdlib.h string.h time.h)

COVERAGE_CFLAGS=
AM_PATH_CHECK(,[
		TEST=test
		COVERAGE_CFLAGS="-fprofile-arcs -ftest-coverage"
		] ,TEST=)
AC_SUBST(CHECK_CFLAGS)
AC_SUBST(CHECK_LIBS)
AC_SUBST(TEST)
AC_SUBST(COVERAGE_CFLAGS)

AC_OUTPUT(Makefile po/Makefile.in docs/Makefile src/Makefile test/Makefile rand.spec rand.lsm docs/doxygen.conf)
